--- a/package.json
+++ b/package.json
@@ -2,18 +2,11 @@
   "name": "mattr-boilerplate",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "seed": "psql -U postgres -d saneful -f ./seeds/seed.saneful_tables.sql",
-    "test": "mocha --require test/setup.js",
-    "dev": "nodemon src/server.js",
-    "migrate": "postgrator --config postgrator-config.js",
-    "migrate:test": "env NODE_ENV=test npm run migrate",
-    "migrate:production": "heroku run npm run migrate",
     "start": "node src/server.js",
     "predeploy": "npm audit",
-    "deploy": "git push heroku master",
-    "postdeploy": "npm run migrate:production"
+    "deploy": "git push heroku master"
   },
   "repository": {
     "type": "git",
